--- a/fourmisgroupe- site/index.html
+++ b/fourmisgroupe- site/index.html
@@ -109,6 +109,34 @@
     </div>
   </footer>
 
-  <script src="js/script.js"></script>
+  <script src="js/script.js"></script><!-- Formulaire de contact (popup cachée au départ) -->
+<div id="contactModal" class="modal">
+  <div class="modal-content">
+    <span id="closeModal">&times;</span>
+    <h2>Contactez-nous</h2>
+    <form>
+      <div class="form-group">
+        <label for="name">Nom</label>
+        <input type="text" id="name" name="name" required>
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+
+      <div class="form-group">
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+      </div>
+
+      <button type="submit">Envoyer</button>
+    </form>
+  </div>
+</div>
+
+<!-- Script pour ouvrir/fermer -->
+<script src="js/contact.js"></script>
+
 </body>
 </html><button id="openContact">📩 Contact</button>
