--- a/fourmisgroupe- site/index.html
+++ b/fourmisgroupe- site/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="fr">
-<head>
-  <meta charset="utf-8" />
+<link rel="stylesheet" href="CSS/contact.css">
+>  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Fourmis Groupe — Marché local en ligne</title>
   <meta name="description" content="Fourmis — votre marché local digitalisé : vivriers, produits agroalimentaires ivoiriens livrés chez vous." />
